--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "start": "node server/index.js",
     "dev": "node server/index.js"
   },
-  "keywords": ["links", "landing-page", "social-media"],
+  "keywords": [
+    "links",
+    "landing-page",
+    "social-media"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "bcrypt": "^5.1.1"
+    "node-fetch": "^2.7.0",
+    "oauth-1.0a": "^2.2.6"
   }
 }
